# Pixel-Circle

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  LICENSE.md  README.md  index.html
.github/workflows/: ci.yml
app/: generate.cpp
include/: pixel-circle.h
src/: main.cpp  pixel-circle.cpp  pixel-circle.h
